Fixed the background on input fields on mobile

--- a/src/scss/User Interface/mobileAdjustments.scss
+++ b/src/scss/User Interface/mobileAdjustments.scss
@@ -34,6 +34,8 @@ body.is-mobile {
 	}
 
 	&.theme-dark {
+		--background-modifier-form-field: var(--background-secondary-alt);
+
 		.workspace-leaf-content,
 		.workspace-drawer-tab-option,
 		.community-modal-info {
